--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\320620491_6197551183613061_4508735740021231216_n-modified (1).png" alt="">
+        <img src="images/320620491_6197551183613061_4508735740021231216_n-modified (1).png" alt="">
     </div>
 
     <div class="content">
