--- a/about.html
+++ b/about.html
@@ -98,27 +98,27 @@
 
         <div class="box-container">
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\Basketball.png">
+                <img src="images/Basketball.png">
                 <h3>Basketball</h3>
             </div>
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\header_ctt.png">
+                <img src="images/header_ctt.png">
                 <h3>CSGO</h3>
             </div>
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\Adobe_Premiere_Pro_CC_icon.svg.png">
+                <img src="images/Adobe_Premiere_Pro_CC_icon.svg.png">
                 <h3>Premiere Pro</h3>
             </div>
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\after-effects-cs6-logo-EC9F3A3961-seeklogo.com.png">
+                <img src="images/after-effects-cs6-logo-EC9F3A3961-seeklogo.com.png">
                 <h3>After Effect</h3>
             </div>
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\Python-logo-notext.svg.png">
+                <img src="images/Python-logo-notext.svg.png">
                 <h3>Python</h3>
             </div>
             <div class="box">
-                <img src="C:\Users\COMPUTER\Downloads\Yossapon-profile2-main\Yossapon-profile2-main\images\1_A240hQnv-DQsFRGuKhiOTw.png">
+                <img src="images/1_A240hQnv-DQsFRGuKhiOTw.png">
                 <h3>Lua Code</h3>
             </div>
         </div>
